Normalise format/style Java code
Set up the Spotless plugin to check/enforce the format/indentation of
the whole Java source code (except forked/3rd-party), using Google Java
Style (AOSP).
Normalise the Java source code accordingly.

Fix #3503.

Signed-off-by: thc202 <thc202@gmail.com>